--- a/package.json
+++ b/package.json
@@ -1,7 +1,12 @@
 {
   "dependencies": {},
   "devDependencies": {
+    "fork-ts-checker-webpack-plugin": "^8.0.0",
     "serverless-offline": "^12.0.4",
-    "serverless-webpack": "^5.11.0"
+    "serverless-webpack": "^5.11.0",
+    "ts-loader": "^9.4.2",
+    "typescript": "^5.0.4",
+    "webpack": "^5.83.1",
+    "webpack-node-externals": "^3.0.0"
   }
 }
