--- a/package.json
+++ b/package.json
@@ -1,6 +1,11 @@
 {
-  "dependencies": {},
+  "dependencies": {
+    "@apollo/server": "^4.7.1",
+    "@as-integrations/aws-lambda": "^2.0.1",
+    "graphql": "^16.6.0"
+  },
   "devDependencies": {
+    "@types/node": "^20.2.1",
     "fork-ts-checker-webpack-plugin": "^8.0.0",
     "serverless-offline": "^12.0.4",
     "serverless-webpack": "^5.11.0",
