--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "devDependencies": {
     "@types/node": "^20.2.1",
     "fork-ts-checker-webpack-plugin": "^8.0.0",
+    "serverless": "^3.31.0",
     "serverless-offline": "^12.0.4",
     "serverless-webpack": "^5.11.0",
     "ts-loader": "^9.4.2",
