--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,21 +33,31 @@ jobs:
     - name: Install packages
       if: steps.yarn-cache.outputs.cache-hit != 'true'
       run: yarn
-    - name: Echo GITHUB_PR_NUMBER
-      env:
-        GITHUB_PR_NUMBER: ${{github.event.pull_request.number}}
-      run: echo "$GITHUB_PR_NUMBER"
+    - name: Set Staging name
+      id: set-staging-name
+      run: |
+        if [[  $GITHUB_REF_NAME  == "staging" || $GITHUB_REF_NAME == "production" ]]; then
+          echo "::set-output name=branch-name::$GITHUB_REF_NAME"
+        else
+          echo "::set-output name=branch-name::${{ github.event.pull_request.number }}"
+        fi
+    - name: Set AWS credentials
+      uses: aws-actions/configure-aws-credentials@v2
+      with:
+        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        aws-region: eu-west-2
     - name: Deploy to Serverless
-      run: serverless deploy --stage ${{github.event.pull_request.number}}
+      run: serverless deploy --stage ${{ steps.set-staging-name.outputs.branch-name }}
 
   remove-deployment:
-    if: github.event_name == 'pull_request' && github.ref != 'refs/heads/staging' && github.ref != 'refs/heads/production'
+    if: github.event_name == 'pull_request' && github.event.action == 'closed' && github.event.pull_request.merged == true && github.ref != 'refs/heads/staging' && github.ref != 'refs/heads/production'
     runs-on: ubuntu-latest
     steps:
     - name: Install Serverless Framework
       run: npm install -g serverless
     - name: Remove deployment from Serverless
-      run: serverless remove --stage $GITHUB_REF_NAME
+      run: serverless remove --stage ${{github.event.pull_request.number}}
       # - name: serverless deploy
       # - uses: serverless/github-action@v3.2
       #  with:
