--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -41,30 +41,27 @@ jobs:
         else
           echo "STAGE=${{github.event.pull_request.number}}" >> "$GITHUB_ENV"
         fi
-      #run: |
-      #  if [[  $GITHUB_REF_NAME  == "staging" || $GITHUB_REF_NAME == "production" ]]; then
-      #    echo "::set-output name=branch-name::$GITHUB_REF_NAME"
-      #  else
-      #    echo "::set-output name=branch-name::${{ github.event.pull_request.number }}"
-      #  fi
     - name: Echo $STAGE
       run: echo "${{ env.STAGE }}"
-    - name: Set AWS credentials
-      uses: aws-actions/configure-aws-credentials@v2
-      with:
-        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        aws-region: eu-west-2
+#    - name: Set AWS credentials
+#      uses: aws-actions/configure-aws-credentials@v2
+#      with:
+#        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+#        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+#        aws-region: eu-west-2
   #  - name: Deploy to Serverless
   #    run: serverless deploy --stage $STAGE
       #run: serverless deploy --stage ${{ env.STAGE }}
 
   remove-deployment:
+    # if: github.event_name == 'pull_request' && github.event.pull_request.merged == true && github.ref != 'refs/heads/staging' && github.ref != 'refs/heads/production'
     if: github.event_name == 'pull_request' && github.event.pull_request.merged == true && github.ref != 'refs/heads/staging' && github.ref != 'refs/heads/production'
     runs-on: ubuntu-latest
     steps:
-    - name: Install Serverless Framework
-      run: npm install -g serverless
-    - name: Remove deployment from Serverless
-      run: serverless remove --stage ${{github.event.pull_request.number}}
+    - name: Echo pull request
+      run: echo "${{github.event.pull_request.number}}"
+   # - name: Install Serverless Framework
+   #   run: npm install -g serverless
+   # - name: Remove deployment from Serverless
+   #   run: serverless remove --stage ${{github.event.pull_request.number}}
 
