--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -55,7 +55,7 @@ jobs:
       #run: serverless deploy --stage ${{ env.STAGE }}
 
   staging-post-deployment:
-    if: github.event_name == 'push' && $GITHUB_REF_NAME  == "finetune-cicd-again"
+    if: github.event_name == 'push' && GITHUB_REF_NAME  == "finetune-cicd-again"
     runs-on: ubuntu-latest
     steps:
     - name: Echo PR number
