--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -60,13 +60,16 @@ jobs:
     steps:
     - name: Echo PR number
       run: echo "${{ github.event.pull_request.number }}"
+    - name: Echo github event name
+      run: echo "${{ github.event_name }}"
   remove-deployment:
     # if: github.event_name == 'pull_request' && github.event.pull_request.merged == true && github.ref != 'refs/heads/staging' && github.ref != 'refs/heads/production'
     if: github.event_name == 'pull_request' && github.event.pull_request.merged == true && github.ref != 'refs/heads/staging' && github.ref != 'refs/heads/production'
     runs-on: ubuntu-latest
     steps:
+    
     - name: Echo pull request
-      run: echo "${{github.event.pull_request.number}}"
+      run: echo "${{ github.event.pull_request.number }}"
    # - name: Install Serverless Framework
    #   run: npm install -g serverless
    # - name: Remove deployment from Serverless
