--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,7 +8,12 @@ on:
     branches:
       - staging
       - production
-      - finetune-cicd-again
+  pull_request_target:
+    branches-ignore:  
+      - staging
+      - production
+    types:
+      - closed
 
 jobs:
   serverless-deploy:
@@ -55,7 +60,7 @@ jobs:
       #run: serverless deploy --stage ${{ env.STAGE }}
 
   staging-post-deployment:
-    if: github.event_name == 'pull_request' && github.event.action == 'closed' && github.event.pull_request.merged == true
+    if: github.event.pull_request.merged == true
     runs-on: ubuntu-latest
     steps:
     - name: Echo PR number
