--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -67,6 +67,13 @@ jobs:
       run: echo "${{ github.event.pull_request.number }}"
     - name: Echo github event name
       run: echo "${{ github.event_name }}"
+  
+  close-pr:
+    steps:
+    - name: Echo github.pull_request_target
+      run: echo "${{ gitbhub.pull_request_target }}"
+    - name: Echo github.pull_request_target.types
+      run: echo "${{ github.pull_request_target.types }}"
       
   remove-deployment:
     # if: github.event_name == 'pull_request' && github.event.pull_request.merged == true && github.ref != 'refs/heads/staging' && github.ref != 'refs/heads/production'
