--- a/.github/workflows/on_delete.yml
+++ b/.github/workflows/on_delete.yml
@@ -5,6 +5,10 @@ on:
     branches-ignore:  
       - staging
       - production
+  push:
+  #  branches:
+  #    - staging
+  #    - production
 
 # Specify what jobs to run
 jobs:
