--- a/.github/workflows/on_push.yml
+++ b/.github/workflows/on_push.yml
@@ -67,6 +67,8 @@ jobs:
       run: echo "${{ github.event.pull_request.number }}"
     - name: Echo github event name
       run: echo "${{ github.event_name }}"
+    - name: Echo github ref name
+      run: echo "${{ github.ref_name }}"
   
   close-pr:
     runs-on: ubuntu-latest
