--- a/.github/workflows/on_delete.yml
+++ b/.github/workflows/on_delete.yml
@@ -4,25 +4,48 @@ name: Serverless Delete
 on:
   pull_request:
     types: [closed]
+    branches-ignore:  
+      - staging
+      - production
 
 jobs:
-  merge-job:
-    if: github.event.pull_request.merged == true
-    runs-on: ubuntu-latest
-    steps:
-    - name: Echo PR number
-      run: echo "PR ${{ github.event.pull_request.number }} has been merged"
-    - name: Echo branch name
-      run: echo "${{ github.ref_name }}"
+ # merge-job:
+ #   if: github.event.pull_request.merged == true
+ #   runs-on: ubuntu-latest
+ #   steps:
+ #   - name: Echo PR number
+ #     run: echo "PR ${{ github.event.pull_request.number }} has been merged"
+ #   - name: Echo branch name
+ #     run: echo "${{ github.ref_name }}"
 
-  close-job:
-    if: github.event.pull_request.merged == false
+ # close-job:
+ #   if: github.event.pull_request.merged == false
+ #   runs-on: ubuntu-latest
+ #   steps:
+ #   - name: Echo PR number
+ #     run: echo "PR ${{ github.event.pull_request.number }} has been closed without being merged"
+ #   - name: Echo branch name
+ #     run: echo "${{ github.ref_name }}"
+  
+  close-or-merge:
     runs-on: ubuntu-latest
     steps:
-    - name: Echo PR number
-      run: echo "PR ${{ github.event.pull_request.number }} has been closed without being merged"
-    - name: Echo branch name
-      run: echo "${{ github.ref_name }}"
+    - name: Checkout repository
+      uses: actions/checkout@v3
+    - name: Set up Node.js
+      uses: actions/setup-node@v2
+      with:
+        node-version: '18'
+    - name: Set AWS credentials
+      uses: aws-actions/configure-aws-credentials@v2
+      with:
+        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        aws-region: eu-west-2
+    - name: Install Serverless Framework
+      run: npm install -g serverless
+    - name: Remove deployment from Serverless
+      run: serverless remove --stage ${{github.event.pull_request.number}}
 
       
     #  - name: Set Branch name
