--- a/.github/workflows/on_delete.yml
+++ b/.github/workflows/on_delete.yml
@@ -33,6 +33,17 @@ jobs:
       uses: actions/setup-node@v2
       with:
         node-version: '18'
+    - name: Cache yarn dependencies
+      uses: actions/cache@v2
+      id: yarn-cache
+      with:
+        path: |
+          ${{ steps.yarn-cache-dir-path.outputs.dir }}
+          **/node_modules
+        key: our-cache-yarn-${{ hashFiles('**/yarn.lock.json') }}
+    - name: Install packages
+      if: steps.yarn-cache.outputs.cache-hit != 'true'
+      run: yarn
     - name: Set AWS credentials
       uses: aws-actions/configure-aws-credentials@v2
       with:
